Initial App Setup for demo project || Project management System

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,4 +16,18 @@
 .mynavbar {
     float: right;
 }
-
+.main{
+    float: right;
+    font-size: 1.0rem;
+}
+.back{
+    float: right;
+    font-size: 1.0rem;
+}
+.mybtn{
+    float: right;
+}
+.comments{
+    border: solid;
+    width: auto;
+}
