--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,13 +1,13 @@
 <% if current_user %>
 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-light" %>
-<%= link_to 'New Project', new_project_path%>
 <% else %>
 <%= link_to 'Sign Up', new_user_registration_path %>
 <% end %>
 <h1>Projects#index</h1>
-<p>Find me in app/views/projects/index.html.erb</p>
 <div class="container">
-<table class="table table-borderless table-dark">
+<%= link_to 'New Project', new_project_path, class: "btn btn-outline-dark main"%>
+<%= link_to 'Add Client', new_client_path, class: "btn btn-outline-dark main" %>
+<table class="table table-borderless table-light">
   <thead>
     <tr>
       <th>Project Title</th>
@@ -15,15 +15,17 @@
       <th>Create At</th>
     </tr>
   </thead>
-  <tbody>
-	<% @project.each do |project| %>
+<tbody>
+  <% @project.each do |project| %>
     <tr>
       <td><%= project.name %></td>
       <td><%= project.description %></td>
       <td><%= project.created_at%></td>
-			<td><%= link_to 'Show', project %></td>
+      <td><%= link_to 'Show', project %></td>
+      <td> <%= link_to 'Edit', edit_project_path(@project) %></td>
+      <td><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
-		<% end %>
-  </tbody>
+  <% end %>
+</tbody>
 </table>
 </div>
