--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,30 +1,33 @@
-<h1>Projects#show</h1>
-<p>Find me in app/views/projects/show.html.erb</p>
-<p id="notice"><%= notice %></p>
-<div class="container">	
-<table class="table table-striped table-dark">
-<thead>
-<tr>
-	<th>Project Title</th>
-	<th>Project Description</th>
-	<th>Create At</th>
-</tr>
-</thead>
-
-	<td><%= @project.name%></td><br>
-	<td><%= @project.description%></td> 
-	<td><%= @project.created_at%></td>
-	<td><%= link_to 'Show', @project %></td>
-	<td> <%= link_to 'Edit', edit_project_path(@project) %></td>
-	<td><%= link_to 'Delete', @project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	<h1 class="text-center">Project <%= @project.name %></h1>
+	<p id="notice"><%= notice %></p>
+	<%= link_to 'Go Back', projects_path, class: "btn btn-secondary mybtn"%>
+	<div class="container">	
+	<table class="">
+		<tbody>
+			<tr>
+				<td><strong>Prject Name: </strong></td>
+				<td><%= @project.name %></td>
+			</tr>
+			<tr>
+				<td><strong>Create At: </strong></td>
+				<td><%= @project.created_at %></td>
+			</tr>
+				<tr>
+				<td><strong>Project Description : </strong></td>
+				<td><%= @project.description %></td>
+				</tr>
+			</tbody>
 	</table>
-	<td>	
-	<% @project.comments.each do |comment| %>
-		<div class="container pb-cmnt-container">
-			<%= comment.comment %>
-			</div>
+		<td>	
+			<% @project.comments.each do |comment| %>
+				<%= render 'comments/comment', comment: comment %>
+				<%= link_to "Delete", project_comment_path(@project, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
 			<% end %>
-			<%= render 'comments/comment'%>
-			</td>
-
-</div>
+			<div class="comment">
+				Total Comments : <%= @project.comments.count %>	
+			</div>
+			<div id="comment">
+				<%= render 'comments/form'%>
+			</div>
+		</td>
+	</div>
