--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$("#comment").append("<%= escape_javascript(render 'comments/comment') %>")
+$("#comments-section").append("<%= escape_javascript(render 'comments/comment', comment: @comment) %>")
