--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
       <td><%= project.description %></td>
       <td><%= project.created_at%></td>
       <td><%= link_to 'Show', project %></td>
-      <td> <%= link_to 'Edit', edit_project_path(@project) %></td>
+      <td> <%= link_to 'Edit', edit_project_path(project) %></td>
       <td><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
