--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,15 +1,1 @@
-<h1>Projects#edit</h1>
-<p>Find me in app/views/projects/edit.html.erb</p>
-<%= form_for @project do |p| %>
-	<div class="form-group">
-		<label for="exampleInputEmail1">Project Title</label>
-		<%= p.text_field :name, class: "form-control", placeholder: "Enter Project title"%>
-		<small id="emailHelp" class="form-text text-muted">Enter project tile for understand project type.</small>
-	</div>
-	<div class="form-group">
-		<label for="exampleInputPassword1">Project Description</label>
-		<%= p.text_area :description, class: "form-control", placeholder: "Enter your Project Description"%>
-	</div>
-	<%= p.submit 'Update Project', class:"btn btn-primary" %>
-<% end %>
-</div>
+<%= render 'form' %>
