--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,15 +1,1 @@
-<div class="container-xl">
-<h1 class="text-center">Create New Project</h1>
-	<%= form_for @project do |p| %>
-  	<div class="form-group">
-    	<label for="exampleInputEmail1">Project Title</label>
-			<%= p.text_field :name, class: "form-control", placeholder: "Enter Project title", required: true %>
-    	<small id="emailHelp" class="form-text text-muted">Enter project tile for understand project type.</small>
-  	</div>
-  	<div class="form-group">
-    	<label for="exampleInputPassword1">Project Description</label>
-			<%= p.text_area :description, class: "form-control", placeholder: "Enter your Project Description"%>
-  	</div>
-		<%= p.submit 'Create Project', class:"btn btn-primary" %>
-	<% end %>
-</div>
+<%= render 'form' %>
