--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,27 +1,1 @@
-<div class="container">                                    
-  <%= form_for @user do |f| %>
-    <div class="row">
-			<div class="col-md-10 form-group ">
-					<%= f.text_field :first_name,  class:"form-control", id:"form_uname", placeholder:"First Name *"%>  
-					<span class="error_form" id="uname_error_message"></span>
-			</div><br>
-			<div class="col-md-10 form-group">
-					<%= f.text_field :last_name,  class:"form-control", id:"form_lname" ,placeholder:" Last Name *" %>
-					<span class="error_form" id="lname_error_message"></span>
-			</div> 
-			<div class="col-md-10 form-group">
-					<%= f.text_field :email, class:"form-control", id: "form_email", placeholder:"Your Eamil *"%> 
-					<span class="error_form" id="email_error_message"></span>  
-			</div><br>
-			<div class="col-md-10 form-group">
-					<%= f.password_field :password, class:"form-control", id:"form_password", placeholder:"Password *"%>
-					<span class="error_form" id="password_error_message"></span> 
-			</div>
-			<div class="col-md-10 form-group">
-					<%= f.password_field :password_confirmation ,class:"form-control", id: "form_retry_password", placeholder:"Retry Password *" %> 
-					<span class="error_form" id="retry_password_error_message"></span>   
-					<%= f.submit "Register", class:"btnRegister btn btn-secondary" %>	    
-			</div>                      
-						
-	<% end %>
-</div>
+<%= render 'form' %>
