--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,7 +3,7 @@
 <% else %>
 <%= link_to 'Sign Up', new_user_registration_path %>
 <% end %>
-<h1>Projects#index</h1>
+<h1 class="text-center">Create Project</h1>
 <div class="container">
 <%= link_to 'New Project', new_project_path, class: "btn btn-outline-dark main"%>
 <%= link_to 'Add Client', new_client_path, class: "btn btn-outline-dark main" %>
