--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,16 +1,28 @@
-<div class="container">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <% if user_signed_in? %>
       <ul class="mynavbar navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active"> <%= link_to 'New Project', new_project_path, class: "btn btn-outline-dark main"%></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link active"><%= link_to 'Add Client', new_client_path, class: "btn btn-outline-dark main" %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active"><%= link_to 'Edit Profile', edit_user_registration_path, class: "btn btn-outline-dark main" %></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active"><%= link_to 'User List', users_path, class: "btn btn-outline-dark main" %></a>
         </li>
       </ul>
+      <% else %>
+      <div class="nav navbar-nav navbar-right">
+        <a class="nav-link active"> <%= link_to 'Project List', projects_path, class: "btn btn-outline-dark main"%></a>
+        <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-dark" %>
+        <%= link_to ' Log In', new_user_session_path, class: "btn btn-dark" %>
+      </div>
+      <% end %>
     </div>
   </div>
 </nav>
-</div>
