--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,31 +1,31 @@
 <% if current_user %>
-<%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-light" %>
+  <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-light" %>
 <% else %>
-<%= link_to 'Sign Up', new_user_registration_path %>
+  <%= link_to 'Sign Up', new_user_registration_path %>
 <% end %>
 <h1 class="text-center">Create Project</h1>
 <div class="container">
-<%= link_to 'New Project', new_project_path, class: "btn btn-outline-dark main"%>
-<%= link_to 'Add Client', new_client_path, class: "btn btn-outline-dark main" %>
-<table class="table table-borderless table-light">
-  <thead>
-    <tr>
-      <th>Project Title</th>
-      <th>Project Description</th>
-      <th>Create At</th>
-    </tr>
-  </thead>
-<tbody>
-  <% @project.each do |project| %>
-    <tr>
-      <td><%= project.name %></td>
-      <td><%= project.description %></td>
-      <td><%= project.created_at%></td>
-      <td><%= link_to 'Show', project %></td>
-      <td> <%= link_to 'Edit', edit_project_path(project) %></td>
-      <td><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-</tbody>
-</table>
+  <table class="table table-borderless table-light">
+    <thead>
+      <tr>
+        <th>Project Title</th>
+        <th>Project Description</th>
+        <th>Create At</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @project.each do |project| %>
+        <tr>
+          <td><%= project.name %></td>
+          <td><%= project.description %></td>
+          <td><%= project.created_at%></td>
+          <td><%= link_to 'Show', project, class:"btn btn-light" %></td>
+          <% if user_signed_in? %>
+          <td> <%= link_to 'Edit', edit_project_path(project), class:"btn btn-light" %></td>
+          <td><%= link_to 'Delete', project, method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-danger"%></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
