--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,26 @@
-<table class="table table-borderless table-light">
-  <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Create At</th>
-      <th>Email</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @user.each do |user| %>
+<div class= "container">
+  <table class="table table-borderless table-light">
+    <thead>
       <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.created_at%></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td> <%= link_to 'Edit', edit_user_path(@user) %></td>
-        <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Create At</th>
+        <th>Email</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @user.each do |user| %>
+        <tr>
+          <td><%= user.first_name %></td>
+          <td><%= user.last_name %></td>
+          <td><%= user.created_at%></td>
+          <td><%= user.email %></td>
+          <td><%= link_to 'View Project', user , class:"btn btn-secondary" %></td>
+          <td> <%= link_to 'Edit', edit_user_path(user) %></td>
+          <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+      All users : <%= @user.count%>     
+    </tbody>
+  </table>
+</div>
