add user roles and improve indentation mistakes

--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">Create Project</h1>
+<h1 class="text-center">Project Listing</h1>
 <div class="container">
   <table class="table table-borderless table-light">
     <thead>
