--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,42 +1,44 @@
-<%= form_with(model: client) do |form| %>
-  <% if client.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(client.errors.count, "error") %> prohibited this client from being saved:</h2>
+<div class="container">
+  <%= form_with(model: client) do |form| %>
+    <% if client.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(client.errors.count, "error") %> prohibited this client from being saved:</h2>
 
-      <ul>
-        <% client.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+        <ul>
+          <% client.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <%= link_to 'Back', clients_path, class: "btn btn-success float-right"%><br>
+    <div class="form-group">
+      <%= form.label :first_name %>
+      <%= form.text_field :first_name , class: "form-control"%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :last_name %>
+      <%= form.text_field :last_name , class: "form-control"%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :address %>
+      <%= form.text_area :address , class: "form-control"%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :phone_number %>
+      <%= form.text_field :phone_number , class: "form-control"%>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :email %>
+      <%= form.text_field :email , class: "form-control"%>
+    </div>
+
+    <div class="actions">
+      <%= form.submit class: "btn btn-primary"%>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_area :address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :phone_number %>
-    <%= form.text_field :phone_number %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
