--- a/app/views/admin/comments/_form.html.erb
+++ b/app/views/admin/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for([:admin, @project, @project.comments.build], remote: true) do |f| %>
   <h1><%= f.label :comment %></h1><br />
-  <%= f.text_area :comment %><br />
+  <%= f.text_area :content %><br />
   <%= f.submit %>
 <% end %>
