--- a/app/views/manager/projects/show.html.erb
+++ b/app/views/manager/projects/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">	
   <h1 class="text-center"><%= @project.name %></h1>
     <p id="notice"><%= notice %></p>
-    <%= link_to 'Go Back', manager_projects_path, class: "btn btn-secondary float-right" %>
+    <%= link_to 'Go Back', manager_client_projects_path, class: "btn btn-secondary float-right" %>
     <table class="">
       <tbody>
         <tr>
@@ -22,10 +22,10 @@
     <div id='comments-section'>
       <% @project.comments.each do |comment| %>
         <%= render 'manager/comments/comment', comment: comment %>
-        <%= link_to "Delete", ([:manager, @project, comment]), method: :delete, data: { confirm: 'Are you sure?' } %>
+        <%= link_to "Delete", ([:manager, @client, @project, comment]), method: :delete, data: { confirm: 'Are you sure?' } %>
       <% end %>
     </div>
-
+ 
     <div class="comment">
       Total Comments : <%= @project.comments.count %>	
     </div>
