--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,20 +3,11 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <% if user_signed_in? && current_user%>
           <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                  <a class="nav-link"><%= link_to 'New Project', new_manager_project_path, class: "btn btn-outline-dark" %>|| <span class="sr-only">(current)</span></a>
-              </li>
               <li class="nav-item">
                   <a class="nav-link"><%= link_to 'Add Client', new_manager_client_path, class: "btn btn-outline-dark" %>||</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><%= link_to 'User List', admin_users_path, class: "btn btn-outline-dark" %>||</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><%= link_to 'Project List', manager_projects_path, class: "btn btn-outline-dark"%>||</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><%= link_to 'Add User', new_admin_user_path, class: "btn btn-outline-dark" %></a>
+                <a class="nav-link" href="#"><%= link_to 'User List', admin_users_path, class: "btn btn-outline-dark" %></a>
               </li>
           </ul>
           <ul class="navbar-nav">
