--- a/app/views/manager/clients/index.html.erb
+++ b/app/views/manager/clients/index.html.erb
@@ -2,7 +2,7 @@
   <p id="notice"><%= notice %></p>
 
   <h1 class="text-center">Client Listing</h1>
-
+  <td><%= link_to 'New Client', new_manager_client_path(@clients) , class:"btn btn-danger float-right"%></td>
   <table class="table table-borderless table-light">
     <thead>
       <tr>
@@ -23,12 +23,12 @@
           <td><%= client.address %></td>
           <td><%= client.phone_number %></td>
           <td><%= client.email %></td>
-          <td><%= link_to 'Show', manager_client_path(client) , class:"btn btn-light" %></td>
-          <td><%= link_to 'Edit', edit_manager_client_path(client) , class:"btn btn-light" %></td>
-          <td><%= link_to 'Destroy', manager_client_path(client), method: :delete, data: { confirm: 'Are you sure?' } , class:"btn btn-danger"%></td>
+          <td><%= link_to 'Client Detail', manager_client_path(client) , class:"btn btn-success" %></td>
+          <td><%= link_to 'Project Listing', manager_client_projects_path(client),  class:"btn btn-success"%></td>
         </tr>
       <% end %>
     </tbody>
   </table>
 
 </div>
+
