--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,9 +19,9 @@
               </li>
           </ul>
           <% else %>
-          <ul class="nav navbar-nav float-left">
+          <ul class="nav navbar-nav">
             <li class="nav-item">
-              <%= link_to 'Log in', new_user_session_path,  class: "btn btn-outline-success" %>
+              <%= link_to 'Log in', new_user_session_path,  class: "btn btn-outline-success float-right" %>
             </li>
           </ul>
           <% end %>
