User added by Admin Only implemented and Indentation of code

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class= "container">
-  <%= link_to 'Add User', new_admin_user_path, class: "btn btn-outline-dark float-right" %>
+  <%= link_to 'New User', new_admin_user_path, class: "btn btn-outline-dark float-right" %>
   <table class="table table-borderless table-light">
     <thead>
       <tr>
