--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,30 +1,33 @@
-<div id="app" class="container">
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <% if user_signed_in? && current_user%>
-          <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                  <a class="nav-link"><%= link_to 'Add Client', new_manager_client_path, class: "btn btn-outline-dark" %>||</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><%= link_to 'User List', admin_users_path, class: "btn btn-outline-dark" %></a>
-              </li>
-          </ul>
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link"><%= link_to 'Edit Profile', edit_user_registration_path, class: "btn btn-outline-dark" %>||</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link"><%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "btn btn-outline-dark" %></a>
-              </li>
-          </ul>
-          <% else %>
-          <ul class="nav navbar-nav">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <%= link_to 'Log in', new_user_session_path,  class: "btn btn-outline-success float-right" %>
+              <a class="nav-link active" aria-current="page" href="#"></a>
             </li>
+            <% if user_signed_in? && current_user.admin? %>
+              <li class="nav-item">
+                <%= link_to 'Users', admin_users_path, class:"btn btn-info" %>||
+                <%= link_to 'Client List', manager_clients_path, class:"btn btn-info"%>
+              </li>
+          <% end %>
+          <% if user_signed_in? && current_user.manager? %>
+          <li class="nav-item">
+            <%= link_to 'Client List', manager_clients_path, class:"btn btn-info"%>
+          </li>
+          <% end %>
+        </ul>
+        <div class="nav navbar-nav navbar-right">
+          <% if user_signed_in? %>
+              <li><%= link_to 'Edit Profile', edit_user_registration_path , class:"btn btn-info"%></li>||
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete, class:"btn btn-info" %></li>
+            <% else %>
+          <ul class="navbar-nav float-right">
+              <li class="nav-item">
+                <%= link_to "Log In", new_user_session_path , class:"btn btn-success"%>
           </ul>
           <% end %>
+        </div> 
       </div>
+    </div>
   </nav>
-</div>
