--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -38,8 +38,7 @@ div.actions {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
-  }
+  background-color: red; }
 
 #error_explanation {
   width: 450px;
