--- a/app/views/manager/clients/show.html.erb
+++ b/app/views/manager/clients/show.html.erb
@@ -1,30 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>First name:</strong>
-  <%= @client.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @client.last_name %>
-</p>
-
-<p>
-  <strong>Address:</strong>
-  <%= @client.address %>
-</p>
-
-<p>
-  <strong>Phone number:</strong>
-  <%= @client.phone_number %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @client.email %>
-</p>
-
-<%= link_to 'Edit', edit_manager_client_path(@client) %> |
-<%= link_to 'Back', manager_clients_path %>
-
+<div class="container">	
+  <h1 class="text-center">Client Information</h1>
+    <table class="">
+      <tbody>
+        <tr>
+          <td><strong>First Name : </strong></td>
+          <td><%= @client.first_name %></td>
+        </tr>
+        <tr>
+          <td><strong> Last Name : </strong></td>
+          <td><%= @client.last_name %></td>
+        </tr>
+        <tr>
+          <td><strong>Address : </strong></td>
+          <td><%= @client.address %></td>
+        </tr>
+        <tr>
+          <td><strong>Mobile Number : </strong></td>
+          <td><%= @client.phone_number %></td>
+        </tr>
+        <tr>
+          <td><strong>Email : </strong></td>
+          <td><%= @client.email %></td>
+        </tr>
+      </tbody>
+    </table>
+    <%= link_to 'Edit', edit_manager_client_path(@client) ,class: "btn btn-success float-right" %>
+    <%= link_to 'Back', manager_clients_path, class: "btn btn-success float-right"%>
+    <%= link_to 'Delete', manager_client_path(@client), method: :delete , class: " btn btn-success float-right "%>
+</div>
