--- a/app/views/manager/projects/show.html.erb
+++ b/app/views/manager/projects/show.html.erb
@@ -2,6 +2,7 @@
   <h1 class="text-center"><%= @project.name %></h1>
     <p id="notice"><%= notice %></p>
     <%= link_to 'Go Back', manager_client_projects_path, class: "btn btn-secondary float-right" %>
+    <%= link_to 'Add Payment', new_manager_client_project_payment_path, class: "btn btn-success float-right"%>
     <table class="">
       <tbody>
         <tr>
